# RizPS-Reborn

./: .gitignore  Cargo.toml  FiddlerScript.cs  README.md  SDKLogin.json  cert.pem  config.json  key.pem
RizPS-Reborn-Custom-RSA-Keys/: private.pem  public.pem
req_files/: 310001_main_dis.json  310001_main_dis_block.json  410001_config_20190403.json  410001_main_dis.json  ios_shadowrockets_conf.conf  languageConfig.json  riz102-catalog-hash.txt  riz102-catalog.json  zh.json  zhtw.json
src/: commands.rs  main.rs  structs.rs  web_panel.rs
www/: accountdeatil.html  accountlist.html  accountlistjs.js  index.html  indexjs.js  panel.html  panelscripts.js
