[package]
name = "RizPS-Reborn"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
base64 = "0.12.3"
rsa = "0.7.2"
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.2.1"
rand = "0.8.4"
bytebuffer = "0.2.1"
colored = "2.0.0"
ctrlc = "3.2.4"
axum-server = { version = "0.3", features = ["tls-rustls"] }